# ispawn

./: .gitignore  CONTRIBUTING.md  LICENCE.txt  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py  switcher.json  update_docs_gh_version.py
.github/scripts/: update_docs_gh_version.py
.github/workflows/: docs.yml
docs/: ARCHITECTURE.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  manual.rst  troubleshooting.rst  usage.rst
ispawn/: config.py  main.py  utils.py
ispawn/commands/: image.py  list_containers.py  logs.py  run.py  setup.py
ispawn/domain/: config.py  container.py  deployment.py  exceptions.py  image.py  proxy.py  security.py
ispawn/domain/services/jupyter/: Dockerfile  config.py  entrypoint.sh
ispawn/domain/services/jupyterhub/: Dockerfile  config.py  entrypoint.sh
ispawn/domain/services/jupyterlab/: Dockerfile  config.py  entrypoint.sh
ispawn/domain/services/rstudio/: Dockerfile  config.py  entrypoint.sh
ispawn/domain/services/vscode/: Dockerfile  config.py  entrypoint.sh
ispawn/files/: shared_providers_dynamic.yml  traefik.yml
ispawn/services/: certificate.py  config.py  container.py  docker.py  image.py
ispawn/templates/: Dockerfile.j2  entrypoint.sh.j2  traefik.yml.j2  traefik_compose.yml.j2
main/: api.html  cli.html  contributing.html  genindex.html  index.html  installation.html  manual.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html
main/_modules/: index.html
main/_modules/ispawn/domain/: config.html  container.html  image.html
main/_modules/ispawn/services/: config.html  container.html  image.html
main/_sources/: api.rst.txt  cli.rst.txt  contributing.rst.txt  index.rst.txt  usage.rst.txt
tests/: README.md  conftest.py  test_config.py
tests/commands/: test_image_command.py  test_logs.py  test_run.py  test_setup.py
tests/domain/: test_container.py  test_deployment.py  test_image_model.py  test_proxy.py  test_security.py
tests/e2e/: test_workflow.py
tests/services/: test_certificate.py  test_config.py  test_docker.py  test_image_service.py
