[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ispawn"
version = "0.1.0"
authors = [
  { name="jfouret" },
]
description = "A tool to spawn docker containers holding multiple services with a single command"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "tabulate>=0.9.0"
]

[project.scripts]
ispawn = "ispawn.main:cli"

[tool.setuptools.package-data]
ispawn = [
  "templates/*.j2",
  "domain/services/*/Dockerfile",
  "domain/services/*/entrypoint.sh"
]
