[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ispawn"
version = "0.2.14"
description = "A tool to spawn docker containers holding multiple services with a single command"
authors = [
  { name="jfouret" },
]
readme = "README.md"
license = { text = "MIT" } # Assuming MIT based on classifiers and LICENCE.txt
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "tabulate>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/jfouret/ispawn"
Repository = "https://github.com/jfouret/ispawn"

[project.scripts]
ispawn = "ispawn.main:cli"

[tool.poetry]
packages = [{include = "ispawn"}]
include = [
    "ispawn/templates/*.j2",
    "ispawn/domain/services/*/Dockerfile",
    "ispawn/domain/services/*/entrypoint.sh",
    "ispawn/files/*",
    "LICENCE.txt",
]

[tool.poetry.group.dev.dependencies]
ruff = "0.11.5"
pytest = "8.3.4"
sphinx = "^8.1.3"
sphinx-click = "^6.0.0"
pydata-sphinx-theme = "^0.16.1"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
